--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,6 @@ known-first-party = ["lmao"]
 [tool.semantic_release]
 branch = "main"
 version_variable = [
-    "src/midigpt/__init__.py:__version__",
+    "src/lmao/__init__.py:__version__",
     "setup.py:__version__"
 ]
