--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
+    exclude: CHANGELOG.md
   - id: check-ast
   - id: check-json
   - id: check-yaml
