--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
   - id: check-ast
   - id: check-json
   - id: check-yaml
+    args: [--unsafe]
   - id: check-toml
   - id: debug-statements
 - repo: https://github.com/pre-commit/mirrors-mypy
